Use simplified toList()
Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>